# Maproulette-Metrics

./: .gitignore  README.md  get_metrics.py  get_user_ids.py  main.py  mr_metrics.spec  pyproject.toml  setup.py
maproulette_metrics/: __init__.py  get_metrics.py  get_metrics_cli.py  get_user_ids.py  mainwindow.ui  qlistwidgetusers.py  qt.py  set_api_key.py  set_api_key_gui.ui  utils.py
tests/: test_get_metrics.py
