[tool.poetry]
name = "maproulette-metrics"
version = "0.0.1"
description = ""
authors = ["Evan Derickson <evan.derickson@kaart.com>"]
readme = "README.md"
packages = [{ include = "maproulette_metrics" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
appdirs = "^1.4.4"
keyring = "^23.8.2"
more-itertools = "^8.14.0"
pandas = "^1.4.3"
pyinstaller = "^5.3"
PySide6 = "^6.3.1"
PyYAML = "^6.0"
requests = "^2.28.1"
XlsxWriter = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
ptvsd = "^4.3.2"
black = { version = "^22.6.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
